--- a/app/agent.html
+++ b/app/agent.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 <!-- control for the Navbar properties + look -->
-<nav class="bg-white shadow">
+<nav class="bg-white shadow-lg">
     <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
-        <div class="flex justify-between items-center h-16">
+        <div class="flex justify-between items-center h-20">
             <div class="flex items-center">
                 <a href="index.html" class="flex items-center">
                     <svg class="w-12 h-12 text-indigo-700 drop-shadow" viewBox="-2 0 110 110" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -107,8 +107,8 @@
             <a href="index.html" class="text-lg font-semibold text-gray-900 hover:text-indigo-700">Home</a>
             <a href="discover.html" class="text-lg font-semibold text-gray-900 hover:text-indigo-700">Discover</a>
         </nav>
-        <p class="mt-10 text-center text-lg font-bold text-gray-500">
-            &copy; 2025 CurioAI. All rights reserved.
+        <p class="mt-5 text-center text-lg font-bold text-black-500 ">
+            &copy; 2025 HiveAI. All rights reserved.
         </p>
     </div>
 </footer>
