--- a/app/index.html
+++ b/app/index.html
@@ -33,25 +33,25 @@
     <!-- ------------------------------------------- -->
 </head>
 
-<body class="bg-white text-gray-900">
+<body class="bg-transparent text-gray-900">
 
 <!-- ------------------------------------------- -->
 <canvas id="shader-bg" class="fixed inset-0 w-screen h-screen z-[-50] pointer-events-none"></canvas>
-<!-- Center Guide Lines -->
+<!-- Center Guide Lines
 <div class="fixed inset-0 pointer-events-none z-50">
-    <!-- Vertical line -->
+     Vertical line
     <div class="absolute top-0 bottom-0 left-1/2 w-px bg-white/30"></div>
-    <!-- Horizontal line -->
+    < Horizontal line
     <div class="absolute left-0 right-0 top-1/2 h-px bg-white/30"></div>
 </div>
-<!-- ------------------------------------------- -->
+------------------------------------------- -->
 
-<div class="bg-white">
+<div class="bg-transparent">
     <!-- Header -->
     <header class="absolute inset-x-0 top-0 z-50">
-        <nav class="bg-white">
+        <nav class="bg-white/10 shadow-lg">
             <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
-                <div class="flex justify-between items-center h-16">
+                <div class="flex justify-between items-center h-20">
                     <!-- Left section: Logo + Nav links -->
                     <div class="flex items-center">
                         <!-- Logo -->
@@ -132,11 +132,11 @@
     <!-- Main Hero Section with reduced top padding -->
     <main class="relative isolate px-6 lg:px-8">
 
-        <!-- Decorative Background
+        <!-- Decorative Background -->
         <div class="absolute inset-x-0 -top-40 -z-10 transform-gpu overflow-hidden blur-3xl sm:-top-80" aria-hidden="true">
             <div class="relative left-[calc(50%-11rem)] aspect-[1155/678] w-[36.125rem] -translate-x-1/2 rotate-[30deg] bg-gradient-to-tr from-[#ff80b5] to-[#9089fc] opacity-30 sm:left-[calc(50%-30rem)] sm:w-[72.1875rem]"></div>
         </div>
-        -->
+
         <div class="mx-auto max-w-3xl py-18 sm:py-48  text-center">
             <h1 class="mt-10 text-6xl font-bold tracking-tight sm:text-7xl">
                 Limitless Agents Made Simple
@@ -146,7 +146,7 @@
             </p>
             <div class="mt-8 flex items-center justify-center gap-x-8 relative -left-1">
                 <!-- Get Started button -->
-                <a href="agent.html" class="w-[180px] text-center rounded-xl bg-gradient-to-r from-blue-500 via-indigo-500 to-purple-500 hover:from-purple-600 hover:to-blue-600 px-4 py-2.5 text-xl font-bold text-white shadow-lg hover:shadow-xl transition-all duration-300">
+                <a href="agent.html" class="w-[180px] text-center rounded-xl bg-gradient-to-r from-blue-500/80 via-indigo-500/80 to-purple-500/80 hover:from-purple-600 hover:to-blue-600 px-4 py-2.5 text-xl font-bold text-white shadow-lg hover:shadow-xl transition-all duration-300">
                     Get Started
                 </a>
 
@@ -157,10 +157,10 @@
 
             </div>
         </div>
-        <!-- Lower Decorative Background
+        <!-- Lower Decorative Background -->
         <div class="absolute inset-x-0 top-[calc(100%-13rem)] -z-10 transform-gpu overflow-hidden blur-3xl sm:top-[calc(100%-30rem)]" aria-hidden="true">
             <div class="relative left-[calc(50%+3rem)] aspect-[1155/678] w-[36.125rem] -translate-x-1/2 bg-gradient-to-tr from-[#ff80b5] to-[#9089fc] opacity-30 sm:left-[calc(50%+36rem)] sm:w-[72.1875rem]"></div>
-        </div> -->
+        </div>
     </main>
 
     <!--Content for typewriter text-->
@@ -264,7 +264,7 @@
                 <a href="agent.html" class="text-lg font-semibold text-gray-900 hover:text-indigo-600 transition">Agent</a>
                 <a href="discover.html" class="text-lg font-semibold text-gray-900 hover:text-indigo-600 transition">Discover</a>
             </nav>
-            <p class="mt-4 text-center text-lg font-bold text-black-100">
+            <p class="mt-4 text-center text-lg font-bold text-black-500">
                 &copy; 2025 HiveAI. All rights reserved.
             </p>
         </div>
