--- a/static/agent.html
+++ b/static/agent.html
@@ -111,7 +111,7 @@
 
     <!-- Where the agent tree pops in once created im going crazy-->
     <div id="agentTreeContainer" class="max-w-full mx-auto mb-12">
-        <h3 class="text-2xl font-bold text-indigo-900 mb-4 text-center">Agent Call Tree</h3>
+        <h3 class="text-2xl font-bold text-indigo-900 mb-4 text-center"></h3>
         <div id="agentTree" class="flex flex-col items-center space-y-20"></div>
     </div>
 </main>
