--- a/static/index.html
+++ b/static/index.html
@@ -147,7 +147,7 @@
             </p>
             <div class="mt-8 flex items-center justify-center gap-x-8 relative -left-1">
                 <!-- Get Started button -->
-                <a href="agent.html" class="w-[180px] text-center rounded-xl bg-gradient-to-r from-blue-500/80 via-indigo-500/80 to-purple-500/80 hover:from-purple-600 hover:to-blue-600 px-4 py-2.5 text-xl font-bold text-white shadow-lg hover:shadow-xl transition-all duration-300">
+                <a href="task.html" class="w-[180px] text-center rounded-xl bg-gradient-to-r from-blue-500/80 via-indigo-500/80 to-purple-500/80 hover:from-purple-600 hover:to-blue-600 px-4 py-2.5 text-xl font-bold text-white shadow-lg hover:shadow-xl transition-all duration-300">
                     Get Started
                 </a>
 
